--- a/css/style.css
+++ b/css/style.css
@@ -60,32 +60,38 @@ header a {
 }
 
 
+.cardTituloImagenFondo{
+   border-width: 0;
+  
+   border-radius: 0;
+}
 
 
 .mainEditIndex{
-    display: flex;
 
- flex-wrap: wrap;
-    height: 95vh;
-    background-size: cover;
-    font-family: 'Tilt Warp';
-    color: white;
-    justify-content: center;
- 
-    
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+   justify-content: center;
+   height: 100vh;
+   background: url(../img/imgthree.png) center;
+   background-size: cover;
    
- }
+font-family: 'Tilt Warp';
+   
+   
+   
+  
+}
 
+.mainEditIndex h1{
+   color: black ;
+   border: 3px  black solid;
+   padding: 10px 5px;
+   backdrop-filter: blur(5px);
+   font-size: 50px;
+}
  
- .mainEditIndex h1{
-margin-top: 100px;
-    font-size: 60px;
-    border: 3px solid;
-    padding: 10px 5px;
-    backdrop-filter: blur(10px);
- 
- 
- } 
 
 
  .navbarDesplegable{
@@ -114,8 +120,14 @@ margin-top: 100px;
   
    
 }
+.carruselStyle{
+   max-height:500px ;
+}
+.colorControlCarrusel{
+  background-color:black;
+}
 
-@media (min-width:577px) and (max-width:1300px){
+/* @media (min-width:577px) and (max-width:1300px){
     .carousel-inner img {
     
         max-height: 700px;
@@ -128,7 +140,7 @@ margin-top: 100px;
         height: 700px;
         max-height: 700px;
     }
-}
+} */
 .mainNuestrosProductos{
     
       
@@ -280,7 +292,7 @@ margin-top: 100px;
    display: grid;
    grid-template-columns: 1fr 1fr ;
    grid-template-rows: 0.5fr 0.5fr;
-   border-top: 1px gray solid;
+
    margin-left: 40px;
  }
 
