--- a/css/style.css
+++ b/css/style.css
@@ -45,17 +45,12 @@
    font-size: 16px;
   margin-top: 15px;
 }
-@media screen and (max-width:576px) {
-   .contactoHeader{
-      display: none;
-   }
-   
-}
+
 
 .barraDeNavegacion{
     background-color: white;
     font-size: 30px;
-    width: 100%;
+ 
     
     
 }
@@ -63,9 +58,6 @@
     text-decoration: none;
     color: black;
 
-}
-.BlackBoxEspacio{
-    margin:7px; 
 }
 
 
@@ -138,13 +130,24 @@ color: white;
  }
 
 
+.navResponsive{
+   font-size: 20px;
 
-
+}
+.navResponsive a{
+   text-decoration: none;
+   color: black;
+   
+}
 @media screen and (max-width:576px) {
-   .barraDeNavegacion a {
-      font-size: 20px;
+  
+   .barraDeNavegacion {
+      display: none;
 
     }
+    .contactoHeader{
+      display: none;
+   }
     .mainEditIndex{
       background: url(../img/imgcarrusel/imgthree.jpg) center;
         align-items: center;
@@ -159,7 +162,20 @@ color: white;
     }
   
    
+   
 }
+@media screen and (min-width:576px) {
+   .navResponsive{
+      display: none;
+      
+   }
+  
+   .navResponsive a{
+      text-decoration: none;
+   }
+}
+
+
 .carruselStyle{
    max-height:500px ;
 }
@@ -225,7 +241,7 @@ color: white;
  .mainBlackBox{
    
    background:rgb(161,145,137);
-   height: 150px;
+   
   
    color:rgb(15,41,102);
 
@@ -252,6 +268,7 @@ font-size: 40px;
    .mainBlackBoxTitulo{
       font-size: 30px;
    }
+  
    
    
 }
