--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import './base/listas';
 @import './base/mapas';
 @import './base/extend';
+@import './base/mixins';
 
 // COMPONENTES
 @import './components/index';
