--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,12 @@
   background-size: cover;
 }
 .sectionImgPrincipal h1 {
+  font-size: 50px;
   color: black;
+  text-decoration: default;
   border: 3px black solid;
   padding: 10px 5px;
   backdrop-filter: blur(5px);
-  font-size: 50px;
-  cursor: default;
 }
 
 .fontFamilyNuestrasPromosIndex {
@@ -92,7 +92,7 @@ hr {
     background-repeat: no-repeat;
   }
   .sectionImgPrincipal h1 {
-    font-size: 30px;
+    font-size: 22px;
     padding: 5px;
   }
 }
